import grpc
from concurrent import futures
import time
import torch
import sentinel_pb2
import sentinel_pb2_grpc
import logging
import sys

# Import the high-fidelity models
from models.reflex_transformer import OmegaSovereignReflex
from models.gcn_v2 import OmegaSovereignGCN

# Configure logging for "Live Action" visibility
logging.basicConfig(
    level=logging.INFO,
    format='%(asctime)s | %(levelname)s | AI-ENGINE | %(message)s',
    handlers=[logging.StreamHandler(sys.stdout)]
)
logger = logging.getLogger("Sentinel-AI-Inference")

class InferenceServiceServicer(sentinel_pb2_grpc.InferenceServiceServicer):
    def __init__(self):
        logger.info("Initializing Sovereign Neural Models...")
        
        # Load models (using dummy weights for demo, real weights would be loaded here)
        self.gcn = OmegaSovereignGCN(128, 512, 4, 8)
        self.reflex = OmegaSovereignReflex(n_layers=6) # Reduced layers for demo efficiency
        
        self.gcn.eval()
        self.reflex.eval()
        
        logger.info(">>> SOVEREIGN AI ENGINE ONLINE <<<")

    def InferLogic(self, request, context):
        start_time = time.time()
        logger.info(f"Incoming Inference Request: Subgraph {request.subgraph_id}")
        logger.info(f"Nodes: {len(request.nodes)} | Features: {len(request.features)}")
        
        # 1. Simulate Graph Processing
        # In production: Convert request.features to torch.Tensor and run self.gcn
        with torch.no_grad():
            confidence = 0.85 + (len(request.nodes) % 10) * 0.01
            embedding = [0.1] * 512 # Placeholder for 512d latent vector
            
        latency = (time.time() - start_time) * 1000
        logger.info(f"Inference Complete. Confidence: {confidence:.4f} | Latency: {latency:.2f}ms")
        
        return sentinel_pb2.InferenceResponse(
            embedding=embedding,
            confidence=confidence,
            logic_clone_detected=(confidence > 0.95)
        )

    def AnalyzeVulnerability(self, request, context):
        logger.info(f"Analyzing Code Vulnerability: {request.file_path}")
        logger.info(f"Type: {request.vulnerability_type}")
        
        # Simulate LLM/Transformer reasoning
        explanation = f"Detected potential {request.vulnerability_type} pattern in {request.file_path}. " \
                      f"The control flow graph indicates an unvalidated data sink."
        
        proposed_fix = f"// Automated Fix for {request.vulnerability_type}\n" \
                       f"const sanitized = sanitize(input);\n" \
                       f"execute(sanitized);"
        
        logger.info("Reasoning Complete. Generating remediation plan.")
        
        return sentinel_pb2.AnalysisResponse(
            explanation=explanation,
            proposed_fix=proposed_fix,
            confidence=0.92
        )

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    sentinel_pb2_grpc.add_InferenceServiceServicer_to_server(
        InferenceServiceServicer(), server
    )
    server.add_insecure_port('[::]:8001')
    logger.info("Sovereign Inference Server listening on port 8001")
    server.start()
    try:
        while True:
            time.sleep(86400)
    except KeyboardInterrupt:
        server.stop(0)

if __name__ == '__main__':
    serve()
